<resources>
    <string name="app_name">Online Store</string>
    <string name="rightAddress">The Right Address For Shopping \n Anyday</string>
    <string name="quality">It is now very easy to reach the \n best quality among all the \n products on the internet!</string>
    <string name="online_store">Online Store.</string>
    <string name="button_start">Start</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="do_you_have_an_account_register_log_in">Do you have an account? Log in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="tv_reset_password_text">We will send you the password reset link to your email</string>
    <string name="cancel_button">Cancel</string>
    <string name="send_button">Send</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_search">Search</string>
    <string name="bottom_cart">Cart</string>
    <string name="bottom_profile">Profile</string>
    <string name="search_now">Search Now</string>
    <string name="best_deals">Best deals</string>
    <string name="best_products">Best Products</string>
    <string name="color_porduct_details">Color</string>
    <string name="size_product_details">Size</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="client_id">678025650961-c7sjriqb1su0er1sfracvc48n29oeudj.apps.googleusercontent.com</string>

</resources>