<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blury_background"
        android:scaleType="centerCrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:drawablePadding="6dp"
            android:text="@string/online_store"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_kleine_shape"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLetsLogin"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/let_s_register"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

        <TextView
            android:id="@+id/tvDoYouHaveAnAccount"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/do_you_have_an_account_register_log_in"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/tvLetsLogin" />

        <EditText
            android:id="@+id/edFirstNameRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:layout_marginTop="50dp"
            android:hint="@string/hint_first_name"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvDoYouHaveAnAccount" />

        <EditText
            android:id="@+id/edLastNameRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_last_name"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/edFirstNameRegister" />

        <EditText
            android:id="@+id/edEmailRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/edLastNameRegister" />

        <EditText
            android:id="@+id/edPasswordRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/edEmailRegister" />


        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonRegisterRegister"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            android:layout_marginTop="15dp"
            android:text="@string/register"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/edPasswordRegister"
            app:spinning_bar_color="@color/white" />

        <ImageView
            android:id="@+id/googleLogin"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/google_login"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegisterRegister" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/googleLogin"
            app:layout_constraintEnd_toEndOf="@+id/googleLogin"
            app:layout_constraintStart_toStartOf="@+id/googleLogin"
            app:layout_constraintTop_toTopOf="@id/googleLogin" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegisterLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegisterRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>